--- a/arch/arm64/boot/dts/renesas/hihope-common.dtsi
+++ b/arch/arm64/boot/dts/renesas/hihope-common.dtsi
@@ -145,9 +145,9 @@
 	clocks = <&cpg CPG_MOD 724>,
 		 <&cpg CPG_MOD 723>,
 		 <&cpg CPG_MOD 722>,
-		 <&versaclock5 1>,
+		 <&versaclock5_6 1>,
 		 <&x302_clk>,
-		 <&versaclock5 2>;
+		 <&versaclock5_6 2>;
 	clock-names = "du.0", "du.1", "du.2",
 		      "dclkin.0", "dclkin.1", "dclkin.2";
 	status = "okay";
@@ -226,7 +226,7 @@
 		#gpio-cells = <2>;
 	};
 
-	versaclock5: clock-generator@6a {
+	versaclock5_6: clock-generator@6a {
 		compatible = "idt,5p49v5923";
 		reg = <0x6a>;
 		#clock-cells = <1>;
