--- a/arch/arm64/boot/dts/renesas/r8a7795-ulcb-android.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-ulcb-android.dts
@@ -71,10 +71,10 @@
 		<&cpg CPG_MOD 722>,
 		<&cpg CPG_MOD 721>,
 		<&cpg CPG_MOD 727>,
-		<&versaclock5 1>,
+		<&versaclock5_6 1>,
 		<&versaclock5_out3>,
 		<&versaclock5_out4>,
-		<&versaclock5 2>;
+		<&versaclock5_6 2>;
 	clock-names = "du.0", "du.1", "du.2", "du.3", "lvds.0",
 		"dclkin.0", "dclkin.1", "dclkin.2", "dclkin.3";
 
