--- a/arch/arm64/boot/dts/renesas/r8a7796-m3ulcb-2x4g.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7796-m3ulcb-2x4g.dts
@@ -82,9 +82,9 @@
 	clocks = <&cpg CPG_MOD 724>,
 		 <&cpg CPG_MOD 723>,
 		 <&cpg CPG_MOD 722>,
-		 <&versaclock5 1>,
+		 <&versaclock5_6 1>,
 		 <&versaclock5_out3>,
-		 <&versaclock5 2>;
+		 <&versaclock5_6 2>;
 	clock-names = "du.0", "du.1", "du.2",
 		      "dclkin.0", "dclkin.1", "dclkin.2";
 };
