--- a/arch/arm64/boot/dts/renesas/salvator-x.dtsi
+++ b/arch/arm64/boot/dts/renesas/salvator-x.dtsi
@@ -19,7 +19,7 @@
 &i2c4 {
 	clock-frequency = <400000>;
 
-	versaclock5: clock-generator@6a {
+	versaclock5_6: clock-generator@6a {
 		compatible = "idt,5p49v5923";
 		reg = <0x6a>;
 		#clock-cells = <1>;
