--- a/arch/arm64/boot/dts/renesas/ulcb.dtsi
+++ b/arch/arm64/boot/dts/renesas/ulcb.dtsi
@@ -258,7 +258,7 @@
 
 	clock-frequency = <400000>;
 
-	versaclock5: clock-generator@6a {
+	versaclock5_6: clock-generator@6a {
 		compatible = "idt,5p49v5925";
 		reg = <0x6a>;
 		#clock-cells = <1>;
