--- a/arch/arm64/boot/dts/renesas/android/ulcb-kf-cn10.dtsi
+++ b/arch/arm64/boot/dts/renesas/android/ulcb-kf-cn10.dtsi
@@ -1,16 +1,60 @@
 /*
 * Device Tree Source for the H3ULCB Kingfisher board:
-*  this adding conflicting resource on VIN0/VIN1/VIN2/VIN3 for CN10
+*  this adding resource for CN10
 *  use CN10 instead default CN29/CN48
 *
 * Copyright (C) 2017 Renesas Electronics Corp.
 * Copyright (C) 2017 Cogent Embedded, Inc.
-* Copyright (C) 2018 GlobalLogic
+* Copyright (C) 2018, 2020 GlobalLogic
 *
 * This file is licensed under the terms of the GNU General Public License
 * version 2.  This program is licensed "as is" without any warranty of any
 * kind, whether express or implied.
 */
+
+#define LVDS_CAMERA		\
+	"ovti,ov10635",		\
+	"ovti,ov490"
+
+/ {
+
+	vdd_cam_a_0: regulator@14 {
+		compatible = "regulator-fixed";
+		regulator-name = "Video-A PWR0";
+		regulator-min-microvolt = <12000000>;
+		regulator-max-microvolt = <12000000>;
+		gpio = <&video_a_ext 9 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+	};
+
+	vdd_cam_a_1: regulator@15 {
+		compatible = "regulator-fixed";
+		regulator-name = "Video-A PWR1";
+		regulator-min-microvolt = <12000000>;
+		regulator-max-microvolt = <12000000>;
+		gpio = <&video_a_ext 8 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+	};
+
+	vdd_cam_a_2: regulator@16 {
+		compatible = "regulator-fixed";
+		regulator-name = "Video-A PWR2";
+		regulator-min-microvolt = <12000000>;
+		regulator-max-microvolt = <12000000>;
+		gpio = <&video_a_ext 11 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+	};
+
+	vdd_cam_a_3: regulator@17 {
+		compatible = "regulator-fixed";
+		regulator-name = "Video-A PWR3";
+		regulator-min-microvolt = <12000000>;
+		regulator-max-microvolt = <12000000>;
+		gpio = <&video_a_ext 10 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+	};
+
+};
 
 &i2cswitch4 {
 	i2c@1 {
@@ -19,176 +63,130 @@
 		reg = <1>;
 
 		/* Slot A (CN10) */
-		ov106xx@60 {
-			compatible = "ovti,ov106xx";
-			reg = <0x60>;
-
-			port@0 {
-				ov106xx_in0ep0vin: endpoint@0 {
-					clock-lanes = <0>;
-					data-lanes = <1 2 3 4>;
-					remote-endpoint = <&vin0ep0>;
-				};
-				ov106xx_in0ep0max: endpoint@1 {
-					clock-lanes = <0>;
-					data-lanes = <1 2 3 4>;
-					remote-endpoint = <&max9286_des0ep0ov106>;
-				};
-			};
-			port@1 {
-				ov106xx_max9286_des0ep0: endpoint@0 {
-					remote-endpoint = <&max9286_des0ep0ov106max>;
-				};
-			};
-		};
-
-		ov106xx@61 {
-			compatible = "ovti,ov106xx";
-			reg = <0x61>;
-
-			port@0 {
-				ov106xx_in1vin: endpoint@0 {
-					clock-lanes = <0>;
-					data-lanes = <1 2 3 4>;
-					remote-endpoint = <&vin1ep0>;
-				};
-				ov106xx_in1max: endpoint@1 {
-					clock-lanes = <0>;
-					data-lanes = <1 2 3 4>;
-					remote-endpoint = <&max9286_des0ep1ov106>;
-				};
-			};
-			port@1 {
-				ov106xx_max9286_des0ep1: endpoint@0 {
-					remote-endpoint = <&max9286_des0ep1ov106max>;
-				};
-			};
-		};
-
-		ov106xx@62 {
-			compatible = "ovti,ov106xx";
-			reg = <0x62>;
-
-			port@0 {
-				ov106xx_in2vin: endpoint@0 {
-					clock-lanes = <0>;
-					data-lanes = <1 2 3 4>;
-					remote-endpoint = <&vin2ep0>;
-				};
-				ov106xx_in2max: endpoint@1 {
-					clock-lanes = <0>;
-					data-lanes = <1 2 3 4>;
-					remote-endpoint = <&max9286_des0ep2ov106>;
-				};
-			};
-			port@1 {
-				ov106xx_max9286_des0ep2: endpoint@0 {
-					remote-endpoint = <&max9286_des0ep2ov106max>;
-				};
-			};
-		};
-
-		ov106xx@63 {
-			compatible = "ovti,ov106xx";
-			reg = <0x63>;
-
-			port@0 {
-				ov106xx_in3: endpoint {
-					clock-lanes = <0>;
-					data-lanes = <1 2 3 4>;
-					remote-endpoint = <&vin3ep0ov106>;
-				};
-			};
-			port@1 {
-				ov106xx_max9286_des0ep3: endpoint@0 {
-					remote-endpoint = <&max9286_des0ep3ov106max>;
-				};
-			};
-		};
 
 		/* MAX9286 @ 0x2c */
 		max9286@2c {
-			compatible = "maxim,max9286";
-			reg = <0x2c>;
-			maxim,sensor_delay = <350>;
-			maxim,links = <4>;
-			maxim,lanes = <4>;
-			/* Should be replaced with correct phandle reference */
-			/* maxim,resetb-gpio = <1>; */
-			maxim,fsync-mode = "automatic";
-			maxim,timeout = <100>;
+			compatible = "maxim,max9286", "ti,ub9x4";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <0x2c 0x3a>;
+			reg-names = "max9286", "ub9x4";
+			regs = <0x0c 0x0d 0x0e 0x0f>;
+			shutdown-gpios = <&video_a_ext 13 GPIO_ACTIVE_LOW>;
 
-			POC0-gpios = <&video_a_ext 9 GPIO_ACTIVE_HIGH>;
-			POC1-gpios = <&video_a_ext 8 GPIO_ACTIVE_HIGH>;
-			POC2-gpios = <&video_a_ext 11 GPIO_ACTIVE_HIGH>;
-			POC3-gpios = <&video_a_ext 10 GPIO_ACTIVE_HIGH>;
+			poc0-supply = <&vdd_cam_a_0>;
+			poc1-supply = <&vdd_cam_a_1>;
+			poc2-supply = <&vdd_cam_a_2>;
+			poc3-supply = <&vdd_cam_a_3>;
 
-			port@0 {
-				max9286_des0ep0ov106: endpoint@0 {
-					max9271-addr = <0x50>;
-					dvp-order = <1>;
-					remote-endpoint = <&ov106xx_in0ep0max>;
+			ports {
+				#address-cells = <1>;
+				#size-cells = <0>;
+
+				port@0 {
+					reg = <0>;
+					deser_in0: endpoint {
+						remote-endpoint = <&camera_out0>;
+					};
 				};
-				max9286_des0ep0vin: endpoint@1 {
-					max9271-addr = <0x50>;
-					dvp-order = <1>;
-					remote-endpoint = <&vin0_max9286_des0ep0>;
+
+				port@1 {
+					reg = <1>;
+					deser_in1: endpoint {
+						remote-endpoint = <&camera_out1>;
+					};
 				};
-				max9286_des0ep0ov106max: endpoint@2 {
-					max9271-addr = <0x50>;
-					dvp-order = <1>;
-					remote-endpoint = <&ov106xx_max9286_des0ep0>;
+
+				port@2 {
+					reg = <2>;
+					deser_in2: endpoint {
+						remote-endpoint = <&camera_out2>;
+					};
 				};
-				max9286_des0ep1ov106: endpoint@3 {
-					max9271-addr = <0x51>;
-					dvp-order = <1>;
-					remote-endpoint = <&ov106xx_in1max>;
+
+				port@3 {
+					reg = <3>;
+					deser_in3: endpoint {
+						remote-endpoint = <&camera_out3>;
+					};
 				};
-				max9286_des0ep1vin: endpoint@4 {
-					max9271-addr = <0x51>;
-					dvp-order = <1>;
-					remote-endpoint = <&vin1_max9286_des0ep1>;
-				};
-				max9286_des0ep1ov106max: endpoint@5 {
-					max9271-addr = <0x51>;
-					dvp-order = <1>;
-					remote-endpoint = <&ov106xx_max9286_des0ep1>;
-				};
-				max9286_des0ep2ov106: endpoint@6 {
-					max9271-addr = <0x52>;
-					dvp-order = <1>;
-					remote-endpoint = <&ov106xx_in2max>;
-				};
-				max9286_des0ep2vin: endpoint@7 {
-					max9271-addr = <0x52>;
-					dvp-order = <1>;
-					remote-endpoint = <&vin2_max9286_des0ep2>;
-				};
-				max9286_des0ep2ov106max: endpoint@8 {
-					max9271-addr = <0x52>;
-					dvp-order = <1>;
-					remote-endpoint = <&ov106xx_max9286_des0ep2>;
-				};
-				max9286_des0ep3vin: endpoint@9 {
-					max9271-addr = <0x53>;
-					dvp-order = <1>;
-					remote-endpoint = <&vin3ep0max>;
-				};
-				max9286_des0ep3ov106max: endpoint@10 {
-					max9271-addr = <0x53>;
-					dvp-order = <1>;
-					remote-endpoint = <&ov106xx_max9286_des0ep3>;
-				};
-				max9286_des0ep3vinmax: endpoint@11 {
-					max9271-addr = <0x53>;
-					dvp-order = <1>;
-					remote-endpoint = <&vin3_max9286_des0ep3>;
+
+				port@4 {
+					reg = <4>;
+					deser_out0: endpoint {
+						clock-lanes = <0>;
+						data-lanes = <1 2 3 4>;
+						remote-endpoint = <&csi40_in>;
+					};
 				};
 			};
-			port@1 {
-				max9286_csi0ep0: endpoint {
-					csi-rate = <700>;
-					remote-endpoint = <&csi40_ep0>;
+
+			i2c@0 {
+				#address-cells = <1>;
+				#size-cells = <0>;
+				reg = <0>;
+
+				camera@60 {
+					compatible = LVDS_CAMERA;
+					reg = <0x60 0x0c>;
+
+					port {
+						camera_out0: endpoint {
+							remote-endpoint = <&deser_in0>;
+						};
+					};
+				};
+			};
+
+
+			i2c@1 {
+				#address-cells = <1>;
+				#size-cells = <0>;
+				reg = <1>;
+
+				camera@61 {
+					compatible = LVDS_CAMERA;
+					reg = <0x61 0x0d>;
+
+					port {
+						camera_out1: endpoint {
+							remote-endpoint = <&deser_in1>;
+						};
+					};
+				};
+			};
+
+			i2c@2 {
+				#address-cells = <1>;
+				#size-cells = <0>;
+				reg = <2>;
+
+				camera@62 {
+					compatible = LVDS_CAMERA;
+					reg = <0x62 0x0e>;
+
+					port {
+						camera_out2: endpoint {
+							remote-endpoint = <&deser_in2>;
+						};
+					};
+				};
+			};
+
+			i2c@3 {
+				#address-cells = <1>;
+				#size-cells = <0>;
+				reg = <3>;
+
+				camera@63 {
+					compatible = LVDS_CAMERA;
+					reg = <0x63 0x0f>;
+
+					port {
+						camera_out3: endpoint {
+							remote-endpoint = <&deser_in3>;
+						};
+					};
 				};
 			};
 		};
@@ -230,12 +228,6 @@
 				output-high;
 				line-name = "Video-A PWR_SHDN";
 			};
-			video_a_des_shdn {
-				gpio-hog;
-				gpios = <13 GPIO_ACTIVE_HIGH>;
-				output-high;
-				line-name = "Video-A DES_SHDN";
-			};
 			video_a_led {
 				gpio-hog;
 				gpios = <12 GPIO_ACTIVE_HIGH>;
@@ -248,191 +240,35 @@
 
 &vin0 {
 	status = "okay";
-
-	ports {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		port@0 {
-			reg = <0>;
-			vin0ep0: endpoint {
-				csi,select = "csi40";
-				virtual,channel = <0>;
-				data-lanes = <1 2 3 4>;
-				remote-endpoint = <&ov106xx_in0ep0vin>;
-			};
-		};
-		port@1 {
-			reg = <1>;
-			csi0ep0: endpoint {
-				remote-endpoint = <&csi40_ep1>;
-			};
-		};
-		port@2 {
-			reg = <2>;
-			vin0_max9286_des0ep0: endpoint@0 {
-				remote-endpoint = <&max9286_des0ep0vin>;
-			};
-		};
-	};
 };
 
 &vin1 {
 	status = "okay";
-
-	ports {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		port@0 {
-			reg = <0>;
-			vin1ep0: endpoint {
-				csi,select = "csi40";
-				virtual,channel = <1>;
-				data-lanes = <1 2 3 4>;
-				remote-endpoint = <&ov106xx_in1vin>;
-			};
-		};
-		port@1 {
-			reg = <1>;
-			csi0ep1: endpoint {
-				remote-endpoint = <&csi40_ep2>;
-			};
-		};
-		port@2 {
-			reg = <2>;
-			vin1_max9286_des0ep1: endpoint@0 {
-				remote-endpoint = <&max9286_des0ep1vin>;
-			};
-		};
-	};
 };
 
 &vin2 {
 	status = "okay";
-
-	ports {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		port@0 {
-			reg = <0>;
-			vin2ep0: endpoint {
-				csi,select = "csi40";
-				virtual,channel = <2>;
-				data-lanes = <1 2 3 4>;
-				remote-endpoint = <&ov106xx_in2vin>;
-			};
-		};
-		port@1 {
-			reg = <1>;
-			csi0ep2: endpoint {
-				remote-endpoint = <&csi40_ep3>;
-			};
-		};
-		port@2 {
-			reg = <2>;
-			vin2_max9286_des0ep2: endpoint@0 {
-				remote-endpoint = <&max9286_des0ep2vin>;
-			};
-		};
-	};
 };
 
 &vin3 {
 	status = "okay";
-
-	ports {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		port@0 {
-			reg = <0>;
-			vin3ep0ov106: endpoint@0 {
-				csi,select = "csi40";
-				virtual,channel = <3>;
-				data-lanes = <1 2 3 4>;
-				remote-endpoint = <&ov106xx_in3>;
-			};
-
-			vin3ep0max: endpoint@1 {
-				csi,select = "csi40";
-				virtual,channel = <3>;
-				data-lanes = <1 2 3 4>;
-				remote-endpoint = <&max9286_des0ep3vin>;
-			};
-		};
-		port@1 {
-			reg = <1>;
-			csi0ep3: endpoint {
-				remote-endpoint = <&csi40_ep4>;
-			};
-		};
-		port@2 {
-			reg = <2>;
-			vin3_max9286_des0ep3: endpoint@0 {
-				remote-endpoint = <&max9286_des0ep3vinmax>;
-			};
-		};
-	};
 };
 
 &csi40 {
 	status = "okay";
 
-	virtual,channel {
-		csi2_vc0 {
-			data,type = "ycbcr422";
-			receive,vc = <0>;
-		};
-		csi2_vc1 {
-			data,type = "ycbcr422";
-			receive,vc = <1>;
-		};
-		csi2_vc2 {
-			data,type = "ycbcr422";
-			receive,vc = <2>;
-		};
-		csi2_vc3 {
-			data,type = "ycbcr422";
-			receive,vc = <3>;
-		};
-	};
+	ports {
+		#address-cells = <1>;
+		#size-cells = <0>;
 
-	port {
-		csi40_ep0: endpoint@0 {
-			clock-lanes = <0>;
-			data-lanes = <1 2 3 4>;
-			csi-rate = <300>;
-			remote-endpoint = <&max9286_csi0ep0>;
-		};
+		port@0 {
+			reg = <0>;
 
-		csi40_ep1: endpoint@1 {
-			clock-lanes = <0>;
-			data-lanes = <1 2 3 4>;
-			csi-rate = <300>;
-			remote-endpoint = <&csi0ep0>;
-		};
-
-		csi40_ep2: endpoint@2 {
-			clock-lanes = <0>;
-			data-lanes = <1 2 3 4>;
-			csi-rate = <300>;
-			remote-endpoint = <&csi0ep1>;
-		};
-
-		csi40_ep3: endpoint@3 {
-			clock-lanes = <0>;
-			data-lanes = <1 2 3 4>;
-			csi-rate = <300>;
-			remote-endpoint = <&csi0ep2>;
-		};
-
-		csi40_ep4: endpoint@4 {
-			clock-lanes = <0>;
-			data-lanes = <1 2 3 4>;
-			csi-rate = <300>;
-			remote-endpoint = <&csi0ep3>;
+			csi40_in: endpoint {
+				clock-lanes = <0>;
+				data-lanes = <1 2 3 4>;
+				remote-endpoint = <&deser_out0>;
+			};
 		};
 	};
 };
